--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.3.3",
     "grunt-contrib-uglify": "~0.4.0",
+    "grunt-node-webkit-builder": "^1.0.2",
     "grunt-run": "^0.2.2"
   }
 }
